@@ -35,6 +35,31 @@ one of the following methods:
 
 =head1 COMMANDS
 
+=command branch-protection-settings
+
+Generate a report containing a list of the branch protections defined for each
+repository in the specified organization or user namespaces.
+
+    gh-audit branch-protection-settings --help
+    usage:
+        gh-audit branch-protection-settings [long options...]
+        gh-audit branch-protection-settings --user jrmash
+        gh-audit branch-protection-settings --help
+
+    short description:
+        Generate a report containing a list of pull requests merged to each repository's default branch, along with the
+        list of users who approved them.
+
+    options:
+        --user           Include resources owned by this user in the report. [Multiple]
+        --org            Include resources owned by this org in the report. [Multiple]
+        --report-format  The format of the report to generate. [Default:"csv"; Possible values: csv, tsv, xlsx]
+        --report-name    The base name of the report file to create. [Default:"branch-protection-settings"]
+        --help           Prints this usage information. [Flag]
+
+    available subcommands:
+        help  Prints this usage information
+
 =command pull-request-approvers
 
 Generates a report containing pull requests merged to the default branch of
