@@ -1,6 +1,7 @@
 Revision History for {{$dist->name}}
 
 {{$NEXT}}
+  * Add `branch-protection-settings` command
 
 v0.1.0    2022-10-01 22:23:37-07:00 America/Los_Angeles
   * Initial version, unleashed upon an unsuspecting world.
